--- a/chat/package.json
+++ b/chat/package.json
@@ -1,18 +1,38 @@
 {
-  "name": "chat",
+  "name": "onad-chat-collector",
   "version": "1.0.0",
   "description": "chat bot client for twitch-onad",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "test": "node test.js",
-    "start": "node index.js"
+    "start": "ts-node index.ts",
+    "start:debug": "nodemon --watch *.ts --exec ts-node index.ts",
+    "start:debug:mac": "nodemon --watch ./ --exec ts-node index.ts",
+    "prebuild": "rimraf dist",
+    "build": "webpack --config webpack.config.js",
+    "test": "jest --config jest.config.json --coverage"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
     "mysql": "^2.17.1",
     "node-schedule": "^1.3.2",
     "tmi.js": "^1.5.0"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/jest": "^25.1.4",
+    "@types/mysql": "^2.15.9",
+    "@types/node": "^13.9.1",
+    "@types/node-schedule": "^1.3.0",
+    "@types/nodemon": "^1.19.0",
+    "@types/tmi.js": "^1.4.0",
+    "jest": "^25.1.0",
+    "nodemon": "^2.0.2",
+    "rimraf": "^3.0.2",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.0",
+    "webpack-node-externals": "^1.7.2"
   }
 }
