--- a/socket/package.json
+++ b/socket/package.json
@@ -15,6 +15,7 @@
     "@types/winston": "^2.4.4",
     "dotenv": "^8.2.0",
     "mysql": "^2.18.1",
+    "node-schedule": "^1.3.2",
     "socketio": "^1.0.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
