--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "@types/passport-oauth2": "^1.4.8",
     "@types/swagger-jsdoc": "^3.0.2",
     "@types/swagger-ui-express": "^4.1.1",
+    "@types/ua-parser-js": "^0.7.33",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "rimraf": "^3.0.2",
@@ -77,6 +78,7 @@
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
     "ts-loader": "^6.2.1",
+    "ua-parser-js": "^0.7.21",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2",
