--- a/node_websocket/package.json
+++ b/node_websocket/package.json
@@ -19,5 +19,8 @@
     "scripts": {
         "start": "nodemon app.js",
         "start:production": "node app.js"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.2"
     }
 }
