--- a/.github/workflows/push_to_docker.yml
+++ b/.github/workflows/push_to_docker.yml
@@ -35,9 +35,13 @@ jobs:
       - name: Build with webpack (with Dependencies Installing)
         run: |
           cd client-ts
-          yarn install --prod && yarn build && cd -
+          yarn install
+          yarn build
+          cd -
           cd server
-          yarn install && yarn build && cd -
+          yarn install
+          yarn build
+          cd -
 
       - name: <client-ts> Dockerize and Push to docker hub
         uses: elgohr/Publish-Docker-Github-Action@2.13
