--- a/.github/workflows/push_to_docker.yml
+++ b/.github/workflows/push_to_docker.yml
@@ -49,7 +49,7 @@ jobs:
           name: hwasurr/onad_web
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          dockerfile: ./client-ts/Dockerfile
+          dockerfile: client-ts/Dockerfile
           tags: "latest,1.${{ github.run_number }}"
 
       - name: <server> Dockerize and Push to docker hub
@@ -58,7 +58,7 @@ jobs:
           name: hwasurr/onad_web_api
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          dockerfile: ./server/Dockerfile
+          dockerfile: server/Dockerfile
           tags: "latest,1.${{ github.run_number }}"
 
       - name: notify to slack
