--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "test": "jest --coverage --detectOpenHandles --forceExit --passWithNoTests"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/body-parser": "^1.19.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
@@ -49,6 +50,7 @@
   },
   "dependencies": {
     "@types/morgan": "^1.7.37",
+    "aws-sdk": "^2.649.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
