--- a/tracker/package.json
+++ b/tracker/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "^0.0.1-security",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "ua-parser-js": "^0.7.21"
   }
 }
