--- a/socket/package.json
+++ b/socket/package.json
@@ -21,13 +21,18 @@
     "@types/socket.io-client": "^1.4.32",
     "@types/winston": "^2.4.4",
     "dotenv": "^8.2.0",
+    "ejs": "^3.0.2",
+    "express": "^4.17.1",
     "mysql": "^2.18.1",
     "node-schedule": "^1.3.2",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "socketio": "^1.0.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.4",
     "browserify": "^16.5.1",
     "rimraf": "^3.0.2"
   }
