--- a/tracker/package.json
+++ b/tracker/package.json
@@ -8,9 +8,14 @@
   "dependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.4",
+    "@types/http-errors": "^1.6.3",
+    "@types/mysql": "^2.15.9",
+    "@types/ua-parser-js": "^0.7.33",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "^0.0.1-security",
+    "http-errors": "^1.7.3",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
     "ua-parser-js": "^0.7.21"
   }
