--- a/tracker/package.json
+++ b/tracker/package.json
@@ -7,12 +7,14 @@
   "license": "MIT",
   "dependencies": {
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.4",
+    "@types/express": "^4.17.6",
+    "@types/express-session": "^1.17.0",
     "@types/http-errors": "^1.6.3",
     "@types/mysql": "^2.15.9",
     "@types/ua-parser-js": "^0.7.33",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "http": "^0.0.1-security",
     "http-errors": "^1.7.3",
     "mysql": "^2.18.1",
