--- a/server/package.json
+++ b/server/package.json
@@ -46,12 +46,14 @@
     "nodemon": "^2.0.2",
     "rimraf": "^3.0.2",
     "ts-node": "^8.6.2",
+    "ts-jest": "^25.3.1",
     "typescript": "^3.8.2"
   },
   "dependencies": {
     "@types/morgan": "^1.7.37",
     "aws-sdk": "^2.649.0",
     "axios": "^0.19.2",
+    "axios-mock-adapter": "^1.18.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
