--- a/tracker/package.json
+++ b/tracker/package.json
@@ -5,6 +5,13 @@
   "main": "app.js",
   "author": "M'baku",
   "license": "MIT",
+  "scripts": {
+    "prebuild": "rimraf ./dist",
+    "build": "tsc",
+    "postbuild": "cp -r ./views ./dist/views",
+    "start:debug": "nodemon --watch *.ts --exec ts-node app.ts",
+    "start:production": "CPC_PAYOUT=100 node ./dist/app.js"
+  },
   "dependencies": {
     "@types/express": "^4.17.6",
     "@types/express-session": "^1.17.0",
@@ -15,9 +22,11 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "http": "^0.0.1-security",
-    "http-errors": "^1.7.3",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
+    "rimraf": "^3.0.2",
+    "ts-node": "^8.8.2",
     "ua-parser-js": "^0.7.21"
   }
 }
