--- a/tracker/.gitignore
+++ b/tracker/.gitignore
@@ -1,22 +1,2 @@
-*/node_modules
-./node_modules/*
-node_modules/*
-node_modules/
-
-log/*
-/log/*
-/bin/log
-*.log
-/bin/log/*.json
-/log
-
-calculationLog/*
-*/calculationLog
-/middlewares/bin/calculationLog
-/bin/calculationLog
-
-/banners/*
-/local/*
-
-/dist/*
-!/dist/views
+dist
+.env
