--- a/tracker/package.json
+++ b/tracker/package.json
@@ -10,7 +10,7 @@
     "build": "tsc",
     "postbuild": "cp -r ./views ./dist/views",
     "start:debug": "nodemon --watch *.ts --exec ts-node app.ts",
-    "start:production": "CPC_PAYOUT=100 node ./dist/app.js"
+    "start:production": "cross-env NODE_ENV=production CPC_PAYOUT=100 node ./dist/app.js"
   },
   "dependencies": {
     "@types/express": "^4.17.6",
@@ -18,6 +18,7 @@
     "@types/http-errors": "^1.6.3",
     "@types/mysql": "^2.15.9",
     "@types/ua-parser-js": "^0.7.33",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
