--- a/tracker/package.json
+++ b/tracker/package.json
@@ -13,16 +13,17 @@
     "start:production": "cross-env NODE_ENV=production CPC_PAYOUT=100 node ./dist/app.js"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/express-session": "^1.17.0",
     "@types/http-errors": "^1.6.3",
+    "@types/morgan": "^1.9.0",
     "@types/mysql": "^2.15.9",
     "@types/ua-parser-js": "^0.7.33",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "http": "^0.0.1-security",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
