--- a/tracker/package.json
+++ b/tracker/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/ejs": "^3.0.2",
     "@types/express": "^4.17.6",
     "@types/express-session": "^1.17.0",
     "@types/http-errors": "^1.6.3",
@@ -22,6 +23,7 @@
     "@types/ua-parser-js": "^0.7.33",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "morgan": "^1.10.0",
