--- a/tracker/package.json
+++ b/tracker/package.json
@@ -17,6 +17,7 @@
     "@types/ejs": "^3.0.2",
     "@types/express": "^4.17.6",
     "@types/express-session": "^1.17.0",
+    "@types/helmet": "^0.0.45",
     "@types/http-errors": "^1.6.3",
     "@types/morgan": "^1.9.0",
     "@types/mysql": "^2.15.9",
@@ -26,8 +27,10 @@
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "helmet": "^3.22.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "nocache": "^2.1.0",
     "nodemon": "^2.0.2",
     "rimraf": "^3.0.2",
     "ts-node": "^8.8.2",
