--- a/.github/workflows/push_to_docker.yml
+++ b/.github/workflows/push_to_docker.yml
@@ -41,10 +41,10 @@ jobs:
           cd tracker
           yarn install
           yarn build
+          cd client-ts
+          yarn install
+          yarn build
 
-        # cd client-ts
-        # yarn install
-        # yarn build
         # cd ..
         # cd server
         # yarn install
@@ -54,14 +54,14 @@ jobs:
         # yarn install
         # yarn build
         # cd ..
-      # - name: <client-ts> Dockerize and Push to docker hub
-      #   uses: elgohr/Publish-Docker-Github-Action@2.14
-      #   with:
-      #     name: hwasurr/onad_web
-      #     workdir: client-ts
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
-      #     tags: "latest,1.${{ github.run_number }}"
+      - name: <client-ts> Dockerize and Push to docker hub
+        uses: elgohr/Publish-Docker-Github-Action@2.14
+        with:
+          name: hwasurr/onad_web
+          workdir: client-ts
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          tags: "latest,1.${{ github.run_number }}"
 
       # - name: <server> Dockerize and Push to docker hub
       #   uses: elgohr/Publish-Docker-Github-Action@2.14
