--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -25,6 +25,7 @@
     "chartjs-plugin-colorschemes": "^0.4.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.12.0",
+    "dayjs": "^1.10.5",
     "dotenv": "^8.2.0",
     "history": "^4.10.1",
     "html2canvas": "^1.0.0-rc.5",
@@ -32,7 +33,6 @@
     "jspdf": "^1.5.3",
     "lodash": "^4.17.21",
     "material-table": "^1.69.3",
-    "moment": "^2.29.1",
     "nanoid": "^3.1.23",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
