--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start:mac": "PORT=3001 DISABLE_ESLINT_PLUGIN=true react-scripts start",
-    "start": "set PORT=3001 && react-scripts start",
-    "build": "NODE_ENV=production GENERATE_SOURCEMAP=false react-scripts build",
+    "start": "set PORT=3001 && set DISABLE_ESLINT_PLUGIN=true && react-scripts start",
+    "build": "NODE_ENV=production GENERATE_SOURCEMAP=false DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "react-scripts test --coverage --detectOpenHandles --forceExit --passWithNoTests",
     "eject": "react-scripts eject",
     "format": "eslint ./src --ext .js,.jsx,.ts,.tsx --fix"
