--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,6 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -34,7 +33,6 @@
     "@nestjs/platform-express": "^7.6.17",
     "@nestjs/schedule": "^0.4.3",
     "@nestjs/typeorm": "^7.1.5",
-    "@types/shortid": "^0.0.29",
     "aws-sdk": "^2.916.0",
     "axios": "^0.21.1",
     "chalk": "^4.1.1",
@@ -63,7 +61,6 @@
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "shortid": "^2.2.16",
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
@@ -86,16 +83,12 @@
     "@types/passport-naver": "^0.2.0",
     "@types/request": "^2.48.5",
     "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "3.9.1",
-    "@typescript-eslint/parser": "3.9.1",
-    "eslint-plugin-react": "^7.23.2",
     "jest": "26.4.2",
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
     "ts-loader": "^6.2.1",
     "ts-node": "9.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "tsconfig-paths": "^3.9.0"
   },
   "jest": {
     "moduleFileExtensions": [
