--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.14.0",
-    "@typescript-eslint/parser": "^2.14.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "service": "cd service && node bin/www",
-    "client": "cd client && yarn start"
+    "client": "cd client && yarn start",
+    "lint:api": "eslint api/\"{src,apps,libs,test}/**/*.ts\" --fix"
   }
 }
