--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -31,6 +31,7 @@
     "material-table": "^1.69.3",
     "nanoid": "^3.1.23",
     "node-sass": "4.14.1",
+    "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-calendar-heatmap": "^1.8.1",
     "react-chartjs-2": "^2.9.0",
