--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -49,7 +49,8 @@
     "recompose": "^0.30.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.3.4",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "zustand": "^3.5.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
