--- a/client-next/package.json
+++ b/client-next/package.json
@@ -19,6 +19,7 @@
     "nanoid": "^3.1.23",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-countup": "^4.4.0",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0"
   },
