--- a/client-next/package.json
+++ b/client-next/package.json
@@ -26,8 +26,21 @@
   "devDependencies": {
     "@types/react": "17.0.11",
     "@types/styled-components": "^5.1.11",
+    "@types/dotenv": "^8.2.0",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "typescript": "4.3.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
