--- a/client-next/package.json
+++ b/client-next/package.json
@@ -16,17 +16,19 @@
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "history": "^5.0.0",
+    "material-table": "^1.69.3",
     "nanoid": "^3.1.23",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-countup": "^4.4.0",
     "react-dom": "17.0.2",
+    "react-number-format": "^4.6.4",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/react": "17.0.11",
     "@types/styled-components": "^5.1.11",
-    "@types/dotenv": "^8.2.0",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "typescript": "4.3.4"
