--- a/live-commerce/package.json
+++ b/live-commerce/package.json
@@ -14,6 +14,7 @@
     "start:production": "node ./dist/app.js"
   },
   "dependencies": {
+    "@google-cloud/text-to-speech": "^3.2.4",
     "@types/http-errors": "^1.6.3",
     "@types/jquery": "^3.3.33",
     "@types/mysql": "^2.15.18",
