--- a/live-commerce/package.json
+++ b/live-commerce/package.json
@@ -19,19 +19,25 @@
     "@types/jquery": "^3.3.33",
     "@types/mysql": "^2.15.18",
     "@types/node-schedule": "^1.3.0",
+    "@types/server-destroy": "^1.0.1",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
+    "browserify": "^17.0.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "google-auth-library": "^7.3.0",
+    "http": "^0.0.1-security",
     "mysql": "^2.18.1",
+    "open": "^8.2.1",
+    "request": "^2.88.2",
+    "server-destroy": "^1.0.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "socketio": "^1.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.4",
-    "browserify": "^16.5.1",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1"
