--- a/client-next/package.json
+++ b/client-next/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,11 +14,11 @@
     "@material-ui/lab": "^4.0.0-alpha.58",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
-    "dotenv": "^10.0.0",
     "history": "^5.0.0",
     "material-table": "^1.69.3",
     "nanoid": "^3.1.23",
     "next": "11.0.1",
+    "prettier": "^2.3.2",
     "react": "17.0.2",
     "react-countup": "^4.4.0",
     "react-dom": "17.0.2",
@@ -29,7 +29,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/react": "17.0.11",
     "@types/styled-components": "^5.1.11",
-    "eslint": "7.29.0",
+    "eslint": "^7.30.0",
     "eslint-config-next": "11.0.1",
     "typescript": "4.3.4"
   },
