--- a/socket/package.json
+++ b/socket/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "tsc",
-    "postbuild": "browserify ./dist/public/client.js ./dist/public/hiddenEventHandler.js ./dist/public/programIdentifier.js ./dist/public/imageClicker.js -o ./dist/public/bundle.js && cp -r ./views ./dist/views && cp -r ./public/images/ ./dist/public/images",
+    "postbuild": "browserify ./dist/lib/client.js ./dist/lib/hiddenEventHandler.js ./dist/lib/programIdentifier.js ./dist/lib/imageClicker.js -o ./dist/lib/bundle.js && cp -r ./views ./dist/views && cp -r ./public/images/ ./dist/public/images",
     "start:debug": "nodemon --watch ./ --exec ts-node ./app.ts",
     "start:production": "node --expose-gc ./dist/app.js"
   },
