--- a/client-next/package.json
+++ b/client-next/package.json
@@ -18,11 +18,13 @@
     "material-table": "^1.69.3",
     "nanoid": "^3.1.23",
     "next": "11.0.1",
+    "notistack": "^1.0.10",
     "prettier": "^2.3.2",
     "react": "17.0.2",
     "react-countup": "^4.4.0",
     "react-dom": "17.0.2",
     "react-number-format": "^4.6.4",
+    "react-query": "^3.19.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
