--- a/client-next/public/manifest.json
+++ b/client-next/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "OnAd",
-  "name": "OnAd for Streaming Advertising",
-  "start_url": ".",
+  "short_name": "OnAD",
+  "name": "OnAD for Streaming Advertising & Live Commerce",
+  "start_url": "/",
   "display": "standalone",
   "icons": [
     {
@@ -39,6 +39,15 @@
       "sizes": "192x192",
       "type": "image\/png",
       "density": "4.0"
+    },
+    {
+      "src": "\/favicons\/512x512.png",
+      "sizes": "512x512",
+      "type": "image\/png",
+      "density": "5.0"
     }
-  ]
+  ],
+  "background_color": "#FFFFFF",
+  "theme_color": "#FFFFFF",
+  "orientation": "portrait"
 }
