--- a/client-next/package.json
+++ b/client-next/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
@@ -19,7 +19,6 @@
     "nanoid": "^3.1.23",
     "next": "11.0.1",
     "notistack": "^1.0.10",
-    "prettier": "^2.3.2",
     "react": "17.0.2",
     "react-countup": "^4.4.0",
     "react-dom": "17.0.2",
@@ -31,8 +30,6 @@
     "@types/dotenv": "^8.2.0",
     "@types/react": "17.0.11",
     "@types/styled-components": "^5.1.11",
-    "eslint": "^7.30.0",
-    "eslint-config-next": "11.0.1",
     "typescript": "4.3.4"
   },
   "browserslist": {
