--- a/client-next/package.json
+++ b/client-next/package.json
@@ -14,6 +14,7 @@
     "@material-ui/lab": "^4.0.0-alpha.58",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "eslint-config-next": "^11.0.1",
     "history": "^5.0.0",
     "material-table": "^1.69.3",
     "nanoid": "^3.1.23",
