--- a/.github/workflows/push-tracker-ecs.yml
+++ b/.github/workflows/push-tracker-ecs.yml
@@ -30,7 +30,7 @@ jobs:
           cd -
 
       - name: Build, tag, and push image to Docker Hub
-        uses: elgohr/Publish-Docker-Github-Action@2.14
+        uses: elgohr/Publish-Docker-Github-Action@v5
         with:
           workdir: tracker
           name: ${{ secrets.DOCKER_USERNAME }}/onad_tracker
